--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ h3 {
 }
 
 section {
-  /* background: rgba(212, 212, 212, 0.856) !important; */
   background: none !important;
   opacity: 0.9;
   padding: 80px;
@@ -72,32 +71,18 @@ section {
   background-size: cover !important;
 }
 
-section.section-top {
-  /* border-radius: 30px 30px 0 0; */
-}
-section.section-mid {
-  /* border-radius: 0px; */
-}
-section.section-bottom {
-  /* border-radius: 0px 0px 30px 30px; */
-}
-
 .section-1 {
-  /* background: url("./images/bg-section-1.png") !important; */
+  background: none;
 }
-
 .section-2 {
   background: url("./images/bg-section-2.png") !important;
 }
-
 .section-3 {
-  /* background: url("./images/bg-section-2.png") !important; */
+  background: none;
 }
-
 .section-4 {
-  /* background: url("./images/bg-section-2.png") !important; */
+  background: none;
 }
-
 .section-5 {
   background: url("./images/bg-section-5.png") !important;
 }
